# novakey-c

./: CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Info.plist  Makefile  README_INSTALLATION.md  cmake_install.cmake  create_dev_certificate.sh  create_signed_ime.sh  install_ime.sh  install_ime_user.sh  install_manifest.txt  test_ime.sh  uninstall_ime.sh  uninstall_ime_user.sh
NovaKey.app/Contents/: Info.plist
NovaKey.app/Contents/MacOS/: NovaKey
NovaKey.app/Contents/Resources/: dictionary.txt
include/: embedding.h  morphology.h  novakey.h  novakey_core.h  search.h
resources/: config.json
src/: main.m
src/embedding/: ollama_client.c
src/ime/: IMKServerCompatibility.m  NovaKeyController.m  NovaKeyServer.m
src/morphology/: mecab_wrapper.c
src/search/: candidate_search.c
src/utils/: config.c
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_embedding  test_embedding.c  test_integration  test_integration.c  test_morphology  test_morphology.c
